Replace some Arrays.asList() with List.of()